# Smart_Shopping_Chatbot

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
code/: create_finetune_qa.ipynb  data_preprocessing.ipynb  train_qwen2_5_colab.ipynb
data/: thong_tin_links_accessory.csv  thong_tin_links_bluetooth.csv  thong_tin_links_laptop.csv  thong_tin_links_micro.csv  thong_tin_links_pc.csv  thong_tin_links_san_pham.csv  thong_tin_links_screen.csv  thong_tin_links_speaker.csv  thong_tin_links_tablet.csv  thong_tin_products_links.csv
models/shopping_chatbot_lora_adapter/: adapter_config.json
notebooks/: data_preprocessing.ipynb  generate_fine_tuning_data.ipynb  local_chatbot_inference.ipynb  model_training_colab.ipynb  prepare_product_catalog.ipynb
processed/: README.md  catalog_specs.csv  catalog_specs.jsonl  catalog_summary.csv  data_processing_report.json  fine_tuning_dataset.jsonl  processing_report.json
src/chatbot_data/: __init__.py  preprocess.py
tests/: test_preprocess.py
