[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-product-data"
version = "0.1.0"
description = "Clean and normalize product catalog data for chatbot and retrieval workflows."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "jupyter>=1.0",
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
